<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/chocolate">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            style="@style/Textview"
            android:layout_weight="1"
            android:text="@string/nota1"/>

        <EditText
            style="@style/Edittext"
            android:layout_weight="1"
            android:hint="@string/Ingresep"
            android:id="@+id/p1"/>

        <TextView
            style="@style/Textview"
            android:layout_weight="1.7"
            android:text="%"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            style="@style/Textview"
            android:layout_weight="1"
            android:text="@string/nota2"/>

        <EditText
            style="@style/Edittext"
            android:layout_weight="1"
            android:hint="@string/Ingresep"
            android:id="@+id/p2"/>

        <TextView
            style="@style/Textview"
            android:layout_weight="1.7"
            android:text="%"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            style="@style/Textview"
            android:layout_weight="1"
            android:text="@string/nota3"/>

        <EditText
            style="@style/Edittext"
            android:layout_weight="1"
            android:hint="@string/Ingresep"
            android:id="@+id/p3"/>

        <TextView
            style="@style/Textview"
            android:layout_weight="1.7"
            android:text="%"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp">

        <TextView
            style="@style/Textview"
            android:layout_weight="1"
            android:text="@string/nota4"/>

        <EditText
            style="@style/Edittext"
            android:layout_weight="1"
            android:hint="@string/Ingresep"
            android:id="@+id/p4"/>

        <TextView
            style="@style/Textview"
            android:layout_weight="1.7"
            android:text="%"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bconfig"
            android:id="@+id/bconfig"
            android:onClick="listenerbconfig"
            />

    </LinearLayout>




</LinearLayout>

